# rusty_spine

./: Cargo.toml  readme.md
.github/workflows/: ci.yaml
assets/test-reference-files/: simple_drawer.spineboy_spine38  simple_drawer.spineboy_spine41
examples/: bevy.rs
src/: animation_state.rs  atlas.rs  attachment_loader.rs  bone.rs  bounding_box_attachment.rs  c_interface.rs  clipping_attachment.rs  lib.rs  mesh_attachment.rs  path_attachment.rs  region_attachment.rs  skeleton.rs  skeleton_controller.rs  skeleton_data.rs  slot.rs
src/c/: libc.rs  mod.rs  spine_c_3.8.rs  wasm.rs
src/debugger/: egui.rs
src/draw/: combined.rs  simple.rs
transpiler/: readme.md
transpiler/src/: transpile.rs
